--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,30 +1,7 @@
 @use "sass:color";
 
-$primary-color: #0091AD;
-$secondary-color: #FC5130;
-
-$main-bg-color: #F7F5FB;
-$second-bg-color: #ADF5FF;
-
-$first-btn-color: #7DC95E;
-$first-btn-darker: color.adjust($first-btn-color, $lightness: -20%);
-$second-btn-color: #772D8B;
-$second-btn-darker: color.adjust($second-btn-color, $lightness: -20%);
-
-$title-font: 'Press Start 2P';
-$main-font: 'Goldman';
-
-@mixin text-style {
-    font-family: $main-font;
-    font-size: 24px;
-}
-
-@mixin button-color($color, $darker-color) {
-    color: white;
-    background: $color;
-    border: 2px solid $darker-color;
-    box-shadow: 0px 4px 0px $darker-color;
-}
+@import "settings/variables";
+@import "settings/mixins";
 
 body {
     display: flex;
@@ -68,6 +45,8 @@ body {
         padding-bottom: 1rem;
         @include text-style;
         text-align: left;
+        appearance: textfield;
+        -webkit-appearance: none;
     }
     &__container {
         width: 30rem;
@@ -75,7 +54,13 @@ body {
     &__input {
         width: 20rem;
         @include text-style;
+        text-align: center;
         border: 3px solid $primary-color;
+        &--error {
+            color: white;
+            background: $secondary-color;
+            border-color: $secondary-color-darker;
+        }
     }
     &__button {
         position: relative;
@@ -94,26 +79,22 @@ body {
             box-shadow: none;
         }
     }
-    &__clue {
+    &__text {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 15rem; height: 5rem;
+        text-align: center;
+        width: 20rem; height: 8rem;
+        padding: 1.5rem;
+        box-sizing: border-box;
         font-family: $main-font;
-        font-size: 32px;
-        color: $secondary-color;
-        border: 2px dashed $secondary-color;
+        @include clue-style(24px, $second-btn-color);
         margin: 2.5rem 0;
-        &--won {
-            color: $first-btn-color;
-            border: 2px dashed $first-btn-color;
+        &--clue {
+            @include clue-style(36px, $secondary-color);
         }
-    }
-    &__score {
-        @include text-style;
-        margin-bottom: 2.5rem;
-        &--hidden {
-            display: none;
+        &--won {
+            @include clue-style(28px, $first-btn-color);
         }
     }
     &__credit {
