--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,6 @@ body {
     justify-content: center;
     background: $main-bg-color;
     margin: 0;
-    padding-top: 5rem;
 }
 
 .box {
@@ -17,6 +16,11 @@ body {
     border: 10px solid white;
     border-radius: 50px;
     box-shadow: 0px 0px 24px rgba(3, 7, 18, 0.20);
+    margin-top: 5rem;
+    @media (max-width: 768px) {
+        width: 90%;
+        margin-top: 2rem;
+    }
     &__heading {
         display: flex;
         align-items: center;
@@ -25,6 +29,10 @@ body {
         border-radius: 40px 40px 0 0;
         padding: 1rem;
         gap: 2rem;
+        @media (max-width: 768px) {
+            flex-direction: column;
+            gap: 0;
+        }
     }
     &__image {
         width: 4rem; height: 4rem;
@@ -33,6 +41,13 @@ body {
         font-family: $title-font;
         font-size: 32px;
         color: white;
+        margin: 1rem 0;
+        @media (max-width: 768px) {
+            font-size: 24px;
+            text-align: center;
+            line-height: 32px;
+            margin: 1rem 0 0;
+        }
     }
     &__content {
         display: flex;
@@ -45,17 +60,29 @@ body {
         padding-bottom: 1rem;
         @include text-style;
         text-align: left;
-        appearance: textfield;
-        -webkit-appearance: none;
+        @media (max-width: 768px) {
+            width: 90%;
+            text-align: center;
+        }
     }
     &__container {
         width: 30rem;
+        @media (max-width: 768px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5rem;
+            width: 90%;
+        }
     }
     &__input {
         width: 20rem;
         @include text-style;
         text-align: center;
         border: 3px solid $primary-color;
+        @media (max-width: 768px) {
+            width: 100%;
+        }
         &--error {
             color: white;
             background: $secondary-color;
@@ -90,6 +117,9 @@ body {
         font-family: $main-font;
         @include clue-style(24px, $second-btn-color);
         margin: 2.5rem 0;
+        @media (max-width: 768px) {
+            width: 100%;
+        }
         &--clue {
             @include clue-style(36px, $secondary-color);
         }
@@ -103,5 +133,10 @@ body {
         font-family: $main-font;
         font-size: 12px;
         color: black;
+        @media (max-width: 768px) {
+            left: 0; bottom: 0; top: 3.5rem;
+            display: flex;
+            justify-content: center;
+        }
     }
 }
