--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,142 +1,13 @@
-@use "sass:color";
+@use 'settings/variables' as vars;
+@use 'settings/mixins' as mixins;
 
-@import "settings/variables";
-@import "settings/mixins";
+@use 'modules/main-box';
+@use 'modules/history';
 
 body {
     display: flex;
-    justify-content: center;
-    background: $main-bg-color;
+    flex-direction: column;
+    align-items: center;
+    background: vars.$main-bg-color;
     margin: 0;
-}
-
-.box {
-    width: 60%;
-    background: $second-bg-color;
-    border: 10px solid white;
-    border-radius: 50px;
-    box-shadow: 0px 0px 24px rgba(3, 7, 18, 0.20);
-    margin-top: 5rem;
-    @media (max-width: 768px) {
-        width: 90%;
-        margin-top: 2rem;
-    }
-    &__heading {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: $primary-color;
-        border-radius: 40px 40px 0 0;
-        padding: 1rem;
-        gap: 2rem;
-        @media (max-width: 768px) {
-            flex-direction: column;
-            gap: 0;
-        }
-    }
-    &__image {
-        width: 4rem; height: 4rem;
-    }
-    &__title {
-        font-family: $title-font;
-        font-size: 32px;
-        color: white;
-        margin: 1rem 0;
-        @media (max-width: 768px) {
-            font-size: 24px;
-            text-align: center;
-            line-height: 32px;
-            margin: 1rem 0 0;
-        }
-    }
-    &__content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 2rem;
-    }
-    &__label {
-        width: 30rem;
-        padding-bottom: 1rem;
-        @include text-style;
-        text-align: left;
-        @media (max-width: 768px) {
-            width: 90%;
-            text-align: center;
-        }
-    }
-    &__container {
-        width: 30rem;
-        @media (max-width: 768px) {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5rem;
-            width: 90%;
-        }
-    }
-    &__input {
-        width: 20rem;
-        @include text-style;
-        text-align: center;
-        border: 3px solid $primary-color;
-        @media (max-width: 768px) {
-            width: 100%;
-        }
-        &--error {
-            color: white;
-            background: $secondary-color;
-            border-color: $secondary-color-darker;
-        }
-    }
-    &__button {
-        position: relative;
-        bottom: 3px;
-        width: 9rem;
-        @include text-style;
-        cursor: pointer;
-        &--check {
-            @include button-color($first-btn-color, $first-btn-darker);
-        }
-        &--replay {
-            @include button-color($second-btn-color, $second-btn-darker);
-        }
-        &:active {
-            transform: translateY(4px);
-            box-shadow: none;
-        }
-    }
-    &__text {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 20rem; height: 8rem;
-        padding: 1.5rem;
-        box-sizing: border-box;
-        font-family: $main-font;
-        @include clue-style(24px, $second-btn-color);
-        margin: 2.5rem 0;
-        @media (max-width: 768px) {
-            width: 100%;
-        }
-        &--clue {
-            @include clue-style(36px, $secondary-color);
-        }
-        &--won {
-            @include clue-style(28px, $first-btn-color);
-        }
-    }
-    &__credit {
-        position: relative;
-        left: 3.5rem; bottom: 0.5rem;
-        font-family: $main-font;
-        font-size: 12px;
-        color: black;
-        @media (max-width: 768px) {
-            left: 0; bottom: 0; top: 3.5rem;
-            display: flex;
-            justify-content: center;
-        }
-    }
 }
