--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,8 +6,59 @@
 
 body {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
     background: vars.$main-bg-color;
     margin: 0;
+    padding-top: 5rem;
+    @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 2rem;
+    }
+}
+
+.history {
+    cursor: grab;
+    position: absolute;
+    right: 4rem; top: 4rem;
+    max-width: 20.25rem; max-height: 20.75rem;
+    @include mixins.block-style(vars.$third-bg-color);
+    box-sizing: border-box;
+    transition: transform 250ms ease-in-out;
+    @media (max-width: 768px) {
+        position: relative;
+        right: 0; top: 0;
+        margin: 1.5rem 0;
+        width: 90%;
+    }
+    &--hidden {
+        transform: scale(0);
+    }
+    &__title {
+        @include mixins.header-style(vars.$second-color);
+        width: 100%;
+        @include mixins.title-style(24px);
+        padding: 1.5rem 2rem;
+        margin: 0;
+        box-sizing: border-box;
+        @media (max-width: 768px) {
+            font-size: 20px;
+        }
+    }
+    &__list {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+    &__item {
+        width: 100%; height: 2.5rem;
+        padding: 0.25rem 0;
+        box-sizing: border-box;
+        @include mixins.text-style;
+        text-align: center;
+        border-top: 2px solid white;
+    }
 }
